[metadata]
name = gampc
version = attr: gampc.__version__
author = Itaï BEN YAACOV
author_email = candeb@free.fr
description = attr: gampc.__program_name__
long_description = file: README.md
url = https://github.com/begnac/gampc
keywords= mpd, client, asynchronous
license = GPLv3+
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: X11 Applications :: GTK
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Multimedia :: Sound/Audio :: Players

[options]
include_package_data = True
scripts =
    bin/gampc
install_requires =
    ampd
    gasyncio
    apsw
    xdg
    zeroconf

[upload]
sign = True
identity = candeb@free.fr

[init_catalog]
domain = gampc
input_file = po/gampc.pot

[update_catalog]
domain = gampc
input_file = po/gampc.pot

[compile_catalog]
domain = gampc

[extract_messages]
input_dirs = src
output_file = po/gampc.pot
